<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_professor_create_system"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.kvm.automaticattendancemarker.ProfessorCreateSystem"
    android:backgroundTint="@color/VieperLightestGreen">


    <LinearLayout
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/background_for_transparent_activity"
        android:backgroundTint="@color/VieperLightestGreen"
        android:layout_gravity="center"
        android:padding="14dp">






        <!-- 0 -->
        <TextView
            android:id="@+id/professor_create_system_lbl_batch_year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_professor_create_system_enter_year"
            android:textSize="30sp"
            android:textColor="@android:color/white"
            android:textAlignment="center"


            android:layout_marginBottom="12dp"/>


    <RadioGroup
        android:id="@+id/professor_create_system_radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <!-- 1 -->
        <RadioButton
            android:id="@+id/professor_create_system_rd_fe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_professor_create_system_txt_fe"
            android:textSize="20sp"
            android:layout_marginTop="8dp"/>

        <!-- 2 -->
        <RadioButton
            android:id="@+id/professor_create_system_rd_se"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_professor_create_system_txt_se"
            android:textSize="20sp"
            android:layout_marginTop="8dp"/>

        <!-- 3 -->
        <RadioButton
            android:id="@+id/professor_create_system_rd_te"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_professor_create_system_txt_te"
            android:textSize="20sp"
            android:layout_marginTop="8dp"/>

        <!-- 4 -->
        <RadioButton
            android:id="@+id/professor_create_system_rd_be"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_professor_create_system_txt_be"
            android:textSize="20sp"
            android:layout_marginTop="8dp"/>

        <!-- 5 -->
        <!--
        <RadioButton
            android:id="@+id/professor_create_system_rd_mcafe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_professor_create_system_txt_mca_fe"
            android:textSize="20sp"
            android:layout_marginTop="8dp"/>
        -->

        <!-- 6 -->
        <!--
        <RadioButton
            android:id="@+id/professor_create_system_rd_mcase"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_professor_create_system_txt_mca_se"
            android:textSize="20sp"
            android:layout_marginTop="8dp"/>
        -->



    </RadioGroup>


        <!-- 7 -->
        <Button
            android:id="@+id/professor_create_system_btn_next_page"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/VieperLightestGreen"
            android:backgroundTint="@color/VieperLightestGreenPlus"
            android:backgroundTintMode="src_atop"
            android:text="@string/lbl_professor_create_system_ok_btn"
            android:textSize="20dp"
            android:layout_gravity="right"
            android:layout_marginTop="18dp"/>

    </LinearLayout>

</FrameLayout>
