<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login_page_choose_profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:gravity="center"
    tools:context="com.kvm.automaticattendancemarker.LoginPageChooseProfile">

    <LinearLayout
        android:id="@+id/login_page_choose_layout_choose"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="30dp"
        android:visibility="gone">

        <!-- 1 -->
        <TextView

            android:id="@+id/login_page_choose_lbl_header"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_login_page_choose_header"
            android:textColor="@android:color/white"
            android:textAlignment="center"
            android:textSize="24sp"
            android:layout_marginTop="10dp"/>



        <!-- 3 -->
        <Button

            android:id="@+id/login_page_choose_professor"

            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/background_for_transparent_clickable_views"
            android:backgroundTint="@android:color/white"
            android:text="@string/lbl_login_page_choose_professor"
            android:textColor="@color/VieperDeepGreen"
            android:textSize="18sp"
            android:textAlignment="center"
            android:layout_marginTop="20dp"/>

        <!-- 3.1 -->
        <Button

            android:id="@+id/login_page_choose_manager"

            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/background_for_transparent_clickable_views"
            android:backgroundTint="@android:color/white"
            android:text="@string/lbl_login_page_choose_manager"
            android:textColor="@color/VieperDeepGreen"
            android:textSize="18sp"
            android:textAlignment="center"
            android:layout_marginTop="20dp"/>

    </LinearLayout>







    <LinearLayout
        android:id="@+id/login_page_choose_layout_retry"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="30dp"
        android:visibility="gone">

        <!-- 4 -->
        <TextView
            android:id="@+id/temp_id_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_login_page_choose_retry_header"
            android:textColor="@android:color/white"
            android:textAlignment="center"
            android:textSize="24sp"
            android:layout_marginTop="10dp"/>

        <!-- 5 -->
        <TextView
            android:id="@+id/temp_id_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_login_page_choose_retry_sub"
            android:textColor="@android:color/white"
            android:textAlignment="center"
            android:textSize="16sp"
            android:layout_marginTop="2dp"/>

        <!-- 6 -->


        <com.google.android.gms.common.SignInButton
            android:id="@+id/login_page_choose_retry_signin_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp" />
    </LinearLayout>

</LinearLayout>
