<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_attendance_mode_professor"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="0dp"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.kvm.automaticattendancemarker.AttendanceModeProfessor">

    <!-- 1 -->
    <TextView
        android:id="@+id/professor_attendance_view_lbl_attendance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_attendance_mode_header"
        android:textSize="24sp"
        android:textColor="@android:color/white"
        android:layout_marginTop="8dp"
        android:layout_marginStart="18dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!-- 2 -->
        <TextView
            android:id="@+id/professor_attendance_view_lbl_class_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_attendance_mode_class_details"
            android:textSize="22sp"
            android:textColor="@android:color/white"
            android:layout_marginTop="8dp"
            android:layout_marginStart="18dp"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ListView

                android:id="@+id/professor_attendance_view_lv_class_details"

                android:layout_width="wrap_content"
                android:layout_height="180dp"
                android:layout_weight="0.5"

                android:background="@drawable/background_for_transparent_activity"
                android:backgroundTint="@color/VieperDeepLightGreen"

                android:clickable="false"
                android:scrollbars="none"/>

            <ListView

                android:id="@+id/professor_attendance_view_lv_class_details_values"

                android:layout_width="wrap_content"
                android:layout_height="180dp"
                android:layout_weight="1.0"

                android:background="@drawable/background_for_transparent_activity"
                android:backgroundTint="@color/VieperDeepLightGreen"

                android:clickable="false"
                android:scrollbars="none"/>

        </LinearLayout>

        <!-- 3 -->
        <TextView
            android:id="@+id/professor_attendance_view_lbl_todays_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_attendance_mode_todays_list"
            android:textSize="22sp"
            android:textColor="@android:color/white"
            android:layout_marginTop="8dp"
            android:layout_marginStart="18dp"/>

        <GridView
            android:id="@+id/professor_attendance_view_gridview_attendance_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:numColumns="7"
            android:layout_weight="1.0"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_gravity="bottom">

            <!-- 4 -->
            <Button

                android:id="@+id/professor_attendance_view_btn_add_students"

                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/background_for_transparent_clickable_views"
                android:backgroundTint="@android:color/white"
                android:text="@string/lbl_attendance_mode_add_students"
                android:textColor="@color/VieperDeepGreen"
                android:textSize="18sp"
                android:textAlignment="center"
                android:layout_marginRight="10dp" />

            <!-- 5 -->
            <Button

                android:id="@+id/main_page_student_view_btn_start_attendance"

                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/background_for_transparent_clickable_views"
                android:text="@string/lbl_attendance_mode_start_attendance"
                android:textColor="@color/VieperDeepGreen"
                android:textSize="40sp"
                android:textAlignment="center"
                android:backgroundTint="@color/VieperLightestGreen" />

            <!-- 6 -->
            <Button

                android:id="@+id/main_page_student_view_btn_add_exclusion"

                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/background_for_transparent_clickable_views"
                android:backgroundTint="@android:color/white"
                android:text="@string/lbl_attendance_mode_exceptions"
                android:textColor="@color/VieperDeepGreen"
                android:textSize="18sp"
                android:textAlignment="center"
                android:layout_marginLeft="10dp"/>

        </LinearLayout>
    </LinearLayout>
</LinearLayout>
