<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_professor_create_system2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.kvm.automaticattendancemarker.ProfessorCreateSystem2"
    android:backgroundTint="@color/VieperLightestGreen">


    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/background_for_transparent_activity"
        android:backgroundTint="@color/VieperLightestGreen"
        android:layout_gravity="center"
        android:padding="14dp">





        <!-- 0 -->
        <TextView
            android:id="@+id/professor_create_system2_lbl_branch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_professor_create_system2_branch"
            android:textSize="30sp"
            android:textColor="@android:color/white"
            android:textAlignment="center"


            android:layout_marginBottom="12dp"/>


        <!-- 1 -->
        <EditText
            android:id="@+id/professor_create_system2_edtxt_branch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="30"
            android:hint="@string/lbl_professor_create_system2_edtxt_hint"
            android:layout_marginTop="40dp"
            android:textSize="24sp" />

        <!--
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/white"/>
        -->





        <!-- 2 -->
        <Button
            android:id="@+id/professor_create_system2_btn_next_page"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/VieperLightestGreen"
            android:backgroundTint="@color/VieperLightestGreenPlus"
            android:backgroundTintMode="src_atop"
            android:text="@string/lbl_professor_create_system2_ok_btn"
            android:textSize="20dp"
            android:layout_gravity="right"
            android:layout_marginTop="40dp"/>

    </LinearLayout>




</FrameLayout>
