<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_class_to_nav"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".activities.navigator.ClassToNav">

    <LinearLayout
        android:id="@+id/nav_layout"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="30dp"
        android:visibility="visible">

        <!-- 2 -->
        <Button

            android:id="@+id/btn_attendance"

            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/background_for_transparent_clickable_views"
            android:backgroundTint="@android:color/white"
            android:text="@string/class_to_nav_btn_attendance"
            android:textColor="@color/VieperDeepGreen"
            android:textSize="24sp"
            android:textAlignment="center"
            android:layout_marginTop="20dp"/>

        <!-- 3 -->
        <Button

            android:id="@+id/btn_logs"

            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/background_for_transparent_clickable_views"
            android:backgroundTint="@android:color/white"
            android:text="@string/class_to_nav_btn_logs"
            android:textColor="@color/VieperDeepGreen"
            android:textSize="24sp"
            android:textAlignment="center"
            android:layout_marginTop="20dp"/>

        <!-- 3.1 -->
        <Button

            android:id="@+id/btn_manage"

            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/background_for_transparent_clickable_views"
            android:backgroundTint="@android:color/white"
            android:text="@string/class_to_nav_btn_manage"
            android:textColor="@color/VieperDeepGreen"
            android:textSize="24sp"
            android:textAlignment="center"
            android:layout_marginTop="20dp"/>

    </LinearLayout>

</FrameLayout>
